--- a/style.css
+++ b/style.css
@@ -79,5 +79,5 @@ body{
     display:all flex;
     background-size:cover;
     background-repeat:no-repeat;
-    background-image: url("/PESSOINHAMALA.jpeg");
+    background-image: url("prova/img/PESSOINHAMALA.jpeg")
         }
